--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Fly Bird Fly Website.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Fly Bird Fly Website.data.br",
-        frameworkUrl: buildUrl + "/Fly Bird Fly Website.framework.js.br",
-        codeUrl: buildUrl + "/Fly Bird Fly Website.wasm.br",
+        dataUrl: buildUrl + "/Fly Bird Fly Website.data",
+        frameworkUrl: buildUrl + "/Fly Bird Fly Website.framework.js",
+        codeUrl: buildUrl + "/Fly Bird Fly Website.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "AD Games",
         productName: "Fly Bird Fly",
